# nafto

./: .gitignore  CMakeLists.txt  README.md
benchmarks/: .gitignore  CMakeLists.txt  bin_func01.cpp  bin_func01.hpp  string_add01.cpp  two_log01.cpp  two_log01.hpp  vector_quotient01.cpp
src/: all_set.hpp  append_taglist.hpp  bitptr2t.hpp  check_or_branches.hpp  clone_comprehension.hpp  comp_return_type.hpp  concat_taglists.hpp  count_member.hpp  eval_set.hpp  flaglist_utils.hpp  flagsTchar.hpp  foldl.hpp  get_embedded_type.hpp  get_missing_type.hpp  map_taglist.hpp  maybe_n.hpp  nafto.hpp  nafto_proxy_fwd.hpp  nafto_types.hpp  serialize_taglist.hpp  taglist_chars.hpp  type2idx.hpp  value_types.hpp
test/: .gitignore  CMakeLists.txt  check_or_branches_test01.cpp  get_missing_type_test01.cpp  nafto_optional_test01.cpp  nafto_overloading_test01.cpp  nafto_test01.cpp  type2idx_test01.cpp  value_types_test01.cpp
